Don't escape strings for xml attribute values.

BUG: 319135